changed cursor styling, changed link styling, fixed bio img alignment

--- a/assets/style.css
+++ b/assets/style.css
@@ -3,14 +3,18 @@
 @import "tailwindcss/components";
 
 @import "tailwindcss/utilities";
-
 html {
   scroll-behavior: smooth;
   font-family: "Fira Mono", monospace;
+  cursor: none;
 }
 
 nav {
   z-index: 5;
+}
+
+#cursor {
+  display: none;
 }
 
 .home-wrapper {
@@ -24,16 +28,25 @@ nav {
   overflow-x: hidden;
   background: linear-gradient(rgb(26, 26, 26), rgb(231, 231, 231));
 }
-
+.pc-nav:hover {
+  color: rgba(194, 232, 18, 1);
+  text-shadow: 0 0 5px white;
+  transition: text-shadow 0.1s ease-in-out;
+}
 /* pop-up */
 .dev-tooltip {
   position: relative;
   color: rgba(194, 232, 18, 1);
-  cursor: pointer;
+  /* cursor: pointer; */
 }
 span {
   color: rgba(194, 232, 18, 1);
 }
+a {
+  cursor: none;
+  z-index: 200;
+}
+
 .dev-tooltip::after {
   content: attr(data-tooltip);
   position: absolute;
@@ -66,6 +79,11 @@ span {
   opacity: 1;
   transition: opacity 1s ease, top 0.2s ease, scale 0.2s ease, left 0.2s ease;
 }
+button,
+input,
+textarea {
+  cursor: none;
+}
 button:focus {
   outline: none;
 }
@@ -87,17 +105,56 @@ button:focus {
   padding-top: 60px;
   transition: 0.35s cubic-bezier(0.445, 0.05, 0.55, 0.95);
 }
+.link-box li:hover {
+  display: block;
+  transform: translateX(8px);
+  transition: all 0.2s ease-out;
+  text-shadow: 0 0 5px rgb(255, 255, 255);
+  color: rgb(95, 90, 90);
+}
+
+.link-box li:hover span.font-bold {
+  display: inline-block;
+  transform: translateX(20px);
+  transition: transform 0.1s ease-in-out;
+}
 
 @media (min-width: 769px) {
-  /* .bio {
-    width: 70rem;
-  } */
   .dev-tooltip:hover::after {
     top: -5em;
     left: 3em;
   }
 }
 @media (min-width: 1024px) {
+  #cursor {
+    display: block;
+    position: absolute;
+    z-index: 150;
+    width: 3rem;
+    height: 3rem;
+    border-radius: 50%;
+    background: radial-gradient(
+      rgba(255, 255, 255, 0.8) 10%,
+      rgba(255, 255, 255, 0) 70%
+    );
+    transform: translate(-50%, -50%);
+    transform-origin: 100%, 100%;
+    pointer-events: none;
+  }
+  .link-mouseover {
+    backdrop-filter: invert();
+    background: radial-gradient(
+      rgba(255, 255, 255, 0),
+      rgba(255, 255, 255, 0.8) 30%,
+      rgba(255, 255, 255, 0) 70%
+    ) !important;
+    width: 3.5rem !important;
+    height: 3.5rem !important;
+    transition: 0.2s ease-in-out;
+    transition-property: width, height;
+    background: transparent;
+  }
+
   .home-wrapper {
     background: linear-gradient(to right, rgb(26, 26, 26), rgb(231, 231, 231));
   }
